Fix a bug with the Internal Server Error during cart operations. Application dependencies remained untouched.